# local-knowledage

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.local.json
.trae/documents/: 模型拆分与响应格式统一_修改计划.md  知识库_CRUD_实现计划.md
.trae/specs/chat-ui-enhancement/: checklist.md  spec.md  tasks.md
.trae/specs/desktop-support/: checklist.md  spec.md  tasks.md
.trae/specs/markdown-editor/: checklist.md  spec.md  tasks.md
backend/: Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/v1/: __init__.py  app_settings.py  knowledge_bases.py  search.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  app_settings.py  conversation.py  document.py  knowledge_base.py
backend/app/schemas/: __init__.py  common.py  document.py  document_base.py  knowledge_base.py  knowledge_base_base.py
backend/app/services/: __init__.py  document.py  knowledge_base.py
backend/app/utils/: text_splitter.py
docs/: md-editor-plan.md  phase4-gap-analysis.md  phase4-settings-spec.md  requirements.md  setting.md
frontend/: Dockerfile  pnpm-lock.yaml  vite.config.ts
frontend/src/: index.css
frontend/src/api/: client.ts
frontend/src/hooks/: index.ts  useDocuments.ts
src/backend/: .env.example  README.md  pyinstaller.spec  pyproject.toml  run_app.py
src/desktop/: backendManager.ts  main.js  main.ts  preload.js  preload.ts  tsconfig.json
src/frontend/: .env.development  electron-builder.yml  package.json  pnpm-lock.yaml  vite.config.ts
(+66 files in other folders)
