[project]
name = "local-knowledge-base"
version = "0.1.0"
description = "私有化本地知识库后端服务"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.9",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.21.0",
    "alembic>=1.15.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.9.0",
    "chromadb>=1.0.7",
    "sentence-transformers>=4.1.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.20",
    "pymupdf>=1.25.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "langchain-text-splitters>=0.3.8",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-asyncio==0.26.0",
    "ruff==0.11.12",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
